README Sieve management via MAILET do not deserve to be in the README
Extract is as an experimental mailet

--- a/docs/modules/servers/pages/distributed/configure/mailets.adoc
+++ b/docs/modules/servers/pages/distributed/configure/mailets.adoc
@@ -126,6 +126,8 @@ include::partial$HeadersToHTTP.adoc[]
 
 include::partial$OnlyText.adoc[]
 
+include::partial$ManageSieveMailet.adoc[]
+
 include::partial$RecoverAttachment.adoc[]
 
 include::partial$SerialiseToHTTP.adoc[]
