--- a/README.adoc
+++ b/README.adoc
@@ -7,6 +7,7 @@ image:https://img.shields.io/badge/Tested%20by-Apache%20Jenkins%20CI-blue.svg[li
 image:https://img.shields.io/badge/Documentation-green.svg[link="https://james.apache.org/documentation.html"]
 image:https://img.shields.io/badge/Downloads-yellow.svg[link="https://james.apache.org/download.cgi"]
 image:https://img.shields.io/badge/Images-docker-blue.svg[link="https://hub.docker.com/r/apache/james"]
+image:https://img.shields.io/badge/Licensed%20with-ApacheV2-orange.svg[link="https://www.apache.org/licenses/"]
 
 image::james-logo.png[link="https://james.apache.org"]
 
