--- a/README.adoc
+++ b/README.adoc
@@ -94,7 +94,7 @@ Useful options includes:
 .Read more...
 [%collapsible]
 ====
-We maintain docker distribution for our Guice based applications :
+We maintain docker distribution for our link:https://github.com/google/guice[Guice] based applications:
 
  * link:https://github.com/apache/james-project/blob/master/server/apps/distributed-app/README.adoc[Guice + Cassandra + RabbitMQ + S3 + ElasticSearch (distributed)]
  * link:https://github.com/apache/james-project/blob/master/server/apps/cassandra-app/README.adoc[Guice + Cassandra + ElasticSearch]
