DOCUMENTATION deployment tests: ix a typo

--- a/docs/modules/development/pages/deployment-tests.adoc
+++ b/docs/modules/development/pages/deployment-tests.adoc
@@ -19,7 +19,7 @@ there ) :
     $ export JAMES_SMTP_PORT=25
 
     $ mvn -T 1C -DskipTests -pl org.apache.james:apache-james-mpt-external-james -am install
-    $ mvn -T 1C -pl org.apache.james:apache-james-mpt-external-james test -Pintegration-tests\
+    $ mvn -T 1C -pl org.apache.james:apache-james-mpt-external-james test -Pintegration-tests
 
 Where :
 
