JAMES-1655 Allow to configure several public keys
This enables request to be supplied by several sources without needing
to share their private keys together.

Also, JWT public keys should not be parsed on a per-request basis.

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/jmap.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/jmap.adoc
@@ -27,7 +27,8 @@ This should not be the same keystore than the ones used by TLS based protocols.
 | Password used to read the keystore
 
 | jwt.publickeypem.url
-| Optional. JWT tokens allow request to bypass authentication
+| Optional. Coma separated list of RSA public keys URLs to validate JWT tokens allowing requests to bypass authentication.
+Defaults to an empty list.
 
 | url.prefix
 | Optional. Configuration urlPrefix for JMAP routes.
