JAMES-3665 Add Kubernetes support document

--- a/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
@@ -3,8 +3,14 @@
 ** xref:architecture/index.adoc[]
 *** xref:architecture/consistency-model.adoc[]
 *** xref:architecture/specialized-instances.adoc[]
-** xref:run.adoc[]
-** xref:run-docker.adoc[]
+** xref:run/index.adoc[Run]
+*** xref:run/run-java.adoc[Run with Java]
+*** xref:run/run-docker.adoc[Run with Docker]
+*** xref:run/run-kubernetes.adoc[Run with Kubernetes]
+**** xref:run/k8s0-checklist.adoc[Deployment Checklist]
+**** xref:run/k8s-logsMetrics.adoc[Logs & Metrics]
+**** xref:run/k8s-values.adoc[values.yaml]
+**** xref:run/k8s-secrets.adoc[secrets.yaml]
 ** xref:configure/index.adoc[]
 *** Protocols
 **** xref:configure/imap.adoc[imapserver.xml]
