JAMES-3665 - add StartTLS to smtp.xml, fix grammar, ref links

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/run/index.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/run/index.adoc
@@ -1,5 +1,5 @@
 = Distributed James Server &mdash; Run 
-:navtitle: Architecture
+:navtitle: Run
 
 This sections presents guidance to all current deployment types of Distributed James Server.
 
