--- a/server/apps/distributed-app/docs/modules/ROOT/pages/run/k8s-secrets.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/run/k8s-secrets.adoc
@@ -62,6 +62,6 @@ https://james.apache.org/howTo/dkim.html[howTo Dkim]
 === External secrets
 
 Some declared secrets in `james-deployment.yaml` are external to the
-James configuration. They are often being created by other component
+James configuration. They are often being created by other components
 like RabbitMQ or Cassandra. You need to have those setup before
 installing the Helm James package.
