JAMES-3665 - Change ref link

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/run/run-kubernetes.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/run/run-kubernetes.adoc
@@ -161,8 +161,8 @@ A summary of different resources that could be interesting to have in hand.
 
 * link:https://james.apache.org/[James Official Website]
 * link:https://github.com/apache/james-project[James Github Project]
-* link:https://james.apache.org/server/manage-webadmin.html[WebAdmin]
-* link:https://james.apache.org/server/manage-cli.html[James CLI]
+* xref:operate/webadmin.adoc[WebAdmin]
+* xref:operate/cli.adoc[James CLI]
 * link:https://james.apache.org/server/manage-guice-distributed-james.html[Manage Guice Distributed James]
 
 ### Kubernetes
