--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/usersrepository.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/usersrepository.adoc
@@ -39,6 +39,9 @@ acting on the behalf of any user.
 | verifyFailureDelay
 | Delay after a failed authentication attempt with an invalid user name or password. Duration string defaulting to seconds, e.g. `2`, `2s`, `2000ms`. Default `0s` (disabled).
 
+| hashingMode
+| change the way password hashes are computed: plain (default), salted, legacy, legacy_salted
+
 |===
 
 == Configuring a LDAP
