--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
@@ -54,20 +54,35 @@ this case, if no body is present, the value "localhost" will be used.
 | connectionLimitPerIP
 | Set the maximum simultaneous incoming connections per IP for this service.
 
-| handler.authRequired
-| This is an optional tag with a boolean body.  If true, then the server will
-require authentication before delivering mail to non-local email addresses.  If this tag is absent, or the value
+| authRequired
+| (deprecated) use auth.announce instead.
+
+This is an optional tag with a boolean body.  If true, then the server will
+announce authentication after HELO command.  If this tag is absent, or the value
 is false then the client will not be prompted for authentication.  Only simple user/password authentication is
-supported at this time. supported values:
+supported at this time. Supported values:
 
-* true: required but announced only to not authorizedAddresses
-* false: don't use AUTH
-* announce: like true, but always announce AUTH capability to clients
+ * true: announced only to not authorizedAddresses
 
-The correct behaviour per RFC value would be false or announce
-but we still support true for backward compatibility and because
-some webmail client fails when AUTH is announced but no authentication
-information has been provided
+ * false: don't announce AUTH. If absent, *authorizedAddresses* are set to a wilcard to accept all remote hosts.
+
+ * announce: like true, but always announce AUTH capability to clients
+
+Please note that emails are only relayed if, and only if, the user did authenticate, or is in an authorized network,
+regardless of this option.
+
+| auth.announce
+| This is an optional tag.  Possible values are:
+
+* never: Don't announce auth. If absent, *authorizedAddresses* are set to a wilcard to accept all remote hosts.
+This is the default behaviour.
+
+* always: always announce AUTH capability to clients.
+
+* forUnauthorizedAddresses: announced only to not authorizedAddresses
+
+Please note that emails are only relayed if, and only if, the user did authenticate, or is in an authorized network,
+regardless of this option.
 
 | authorizedAddresses
 | Authorize specific addresses/networks.
