JAMES-3680 smtpserver.xml: avoid the implicit default wildcard for authorizedAddresses
When authRequired = false all addresses were accepted.

We should rather require this configuration to be explicit.

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
@@ -74,8 +74,7 @@ regardless of this option.
 | auth.announce
 | This is an optional tag.  Possible values are:
 
-* never: Don't announce auth. If absent, *authorizedAddresses* are set to a wilcard to accept all remote hosts.
-This is the default behaviour.
+* never: Don't announce auth.
 
 * always: always announce AUTH capability to clients.
 
