JAMES-3680 Allow to disable SMTP plain auth
Once OIDC integration will be developed, this
will allow to only expose strong authentication
mechanisms.

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
@@ -87,6 +87,10 @@ regardless of this option.
 | This is an optional tag, defaults to true. If true, authentication is not advertised via capabilities on unencrypted
 channels.
 
+| auth.plainAuthEnabled
+| This is an optional tag, defaults to true. If false, AUTH PLAIN and AUTH LOGIN will not be exposed. This setting
+can be used to enforce strong authentication mechanisms.
+
 | authorizedAddresses
 | Authorize specific addresses/networks.
 
