JAMES-3680 IMAP Allow disabling plain authentication

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/imap.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/imap.adoc
@@ -46,6 +46,9 @@ Defaults to 0 (unlimited). Must be a positive integer, optionally with a unit: B
 | plainAuthDisallowed
 | Whether to enable Authentication PLAIN if the connection is not encrypted via SSL or STARTTLS. Defaults to `true`.
 
+| auth.plainAuthEnabled
+| Whether to enable Authentication PLAIN/ LOGIN command. Defaults to `true`.
+
 | timeout
 | Default to 30 minutes. After this time, inactive channels that have not performed read, write, or both operation for a while
 will be closed. Negative value disable this behaviour.
